--- a/tictactoe/style.css
+++ b/tictactoe/style.css
@@ -1,3 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+:root{
+    --bg: #3d3d3d;
+    --font: #d3d3d3;
+    --primary: rgb(221, 255, 70);
+    --secoundary: rgb(195, 224, 65);
+}
+body{
+    margin: 0;
+    font-family: 'Montserrat', sans-serif;
+    background-color: var(--bg);
+    color: var(--font);
+}
+h1{
+    padding-top: 3vh;
+    text-align: center;
+    font-size: 50px;
+}
+menu{
+    margin-top: 20vh;
+    text-align: center;
+}
+table{
+    font-size: 80px;
+    margin: auto;
+}
 table, td {
     border: 2px solid black;
     border-collapse: collapse;
@@ -5,9 +31,48 @@ table, td {
 td{
     width: 100px;
     height: 100px;
-    text-align: center;
 }
 .empty:hover{
-    background-color: red;
+    background-color: var(--primary);
     cursor: pointer;
+}
+#game{
+    padding-top: 10vh;
+    display: none;
+    margin: auto;
+    text-align: center;
+}
+#code{
+    text-align: center;
+    padding-top: 1vh;
+    font-size: 20px;
+}
+#codeColor{
+    color: var(--primary);
+}
+#joinCode{
+    border: none;
+    border-bottom: 3px solid var(--primary);
+    font-size: 20px;
+    width: 70px;
+    text-align: center;
+    background-color: var(--bg);
+    color: var(--font);
+}
+#joinCode:focus{
+    outline: none;
+    border-bottom: 3px solid var(--secoundary);
+}
+button{
+    margin: 10px;
+    padding: 10px;
+    font-size: 20px;
+    border: 3px solid var(--primary);
+    border-radius: 10px;
+    cursor: pointer;
+    background-color: var(--bg);
+    color: var(--font);
+}
+button:hover{
+    border: 3px solid var(--secoundary);
 }
