--- a/tictactoe/style.css
+++ b/tictactoe/style.css
@@ -76,3 +76,9 @@ button{
 button:hover{
     border: 3px solid var(--secoundary);
 }
+#copy img{
+    top: 7px;
+    position: relative;
+    width: 30px;
+    cursor: pointer;
+}
